OpenVDB Version History
=======================

Version 7.1.0 - In Development

    Improvements:
    - Added GroupWriteHandle::setUnsafe() for faster performance when the group
      array is known to be in-core and non-uniform.
    - Add support for default value metadata when creating AttributeArrays or
      appending to an AttributeSet.
    - Added new group inspection methods to the AttributeSet::Descriptor.
    - Introduced a StringMetaCache class for convenient string attribute
      metadata lookup and performed some minor optimizations.
    - Removed redundant floor in points::floatingPointToFixedPoint.
    - Add gitignore to repository root.
    - Removed some logic for compilers older than Visual Studio 2019.
    - Add a new Houdini ABI test binary.
    - Fixed an indexing typo in tools::Filter. [Contributed by Yuanming Hu]
    - Removed redundant null pointer checks. [Contributed by Kuba Roth]
    - Added support for vdb_view on Windows. Requires GLEW.
    - Removed support for GLFW 2.
    - vdb_view now uses OPENVDB_LOG_FATAL when catching exceptions.
    - vdb_view, vdb_print and vdb_render now use std::terminate() when catching
      an unknown exception.

    New features:
    - Added Grid::isTreeUnique() to tell if the tree is shared with another
      grid.
    - Added PointDataLeafNode::stealAttributeSet() and
      AttributeSet::removeAttribute() for releasing ownership of attribute
      data.
    - Added AttributeSet::Descriptor::groupIndexCollision() for detecting
      group index collisions when attempting to merge two Descriptors.

    Bug fixes:
    - Fixed a bug where grids with no active values might return true when the
      method evalActiveVoxelBoundingBox is called. The correct behavior is to
      only return true if the grid contains any active values.
    - Fixed a sign propagation bug in tools::traceExteriorBoundaries() used by
      tools::meshToVolume(). This could cause values to not be propagated across