@@ -250,7 +250,6 @@ ifeq (yes,$(has_log4cplus))
 endif
 abi := $(strip $(abi))
 ifneq (,$(abi))
-    CXXFLAGS += -DOPENVDB_3_ABI_COMPATIBLE  # TODO: deprecated
     CXXFLAGS += -DOPENVDB_ABI_VERSION_NUMBER=$(abi)
 endif
 
