@@ -160,26 +160,18 @@ TestMetaMap::testIO()
     MetaMap meta2;
     std::istringstream istr(ostr.str(), std::ios_base::binary);
     CPPUNIT_ASSERT_NO_THROW(meta2.readMeta(istr));
-#if OPENVDB_ABI_VERSION_NUMBER < 5
-    CPPUNIT_ASSERT_EQUAL(0, int(meta2.metaCount()));
-#else
     CPPUNIT_ASSERT_EQUAL(3, int(meta2.metaCount()));
 
     // Verify that writing metadata of unknown type (i.e., UnknownMetadata) is possible.
     std::ostringstream ostrUnknown(std::ios_base::binary);
     meta2.writeMeta(ostrUnknown);
-#endif
 
     // Register just one of the three types, then reread and verify that
     // the value of the registered type can be retrieved.
     Int32Metadata::registerType();
     istr.seekg(0, std::ios_base::beg);
     CPPUNIT_ASSERT_NO_THROW(meta2.readMeta(istr));
-#if OPENVDB_ABI_VERSION_NUMBER >= 5
     CPPUNIT_ASSERT_EQUAL(3, int(meta2.metaCount()));
-#else
-    CPPUNIT_ASSERT_EQUAL(1, int(meta2.metaCount()));
-#endif
     CPPUNIT_ASSERT_EQUAL(meta.metaValue<int>("meta2"), meta2.metaValue<int>("meta2"));
 
     // Register the remaining types.
@@ -207,7 +199,6 @@ TestMetaMap::testIO()
         CPPUNIT_ASSERT_DOUBLES_EQUAL(dval, dval2,0);
     }
     {
-#if OPENVDB_ABI_VERSION_NUMBER >= 5
         // Verify that metadata that was written as UnknownMetadata can
         // be read as typed metadata once the underlying types are registered.
         std::istringstream istrUnknown(ostrUnknown.str(), std::ios_base::binary);
@@ -221,7 +212,6 @@ TestMetaMap::testIO()
         CPPUNIT_ASSERT_EQUAL(meta.metaValue<int>("meta2"), meta2.metaValue<int>("meta2"));
         CPPUNIT_ASSERT_DOUBLES_EQUAL(
             meta.metaValue<double>("meta3"), meta2.metaValue<double>("meta3"), 0.0);
-#endif
     }
 
     // Clear the registry once the test is done.
