@@ -181,9 +181,7 @@ ifeq (yes,$(has_log4cplus))
 endif
 abi := $(strip $(abi))
 ifneq (,$(abi))
-    CXXFLAGS += -DOPENVDB_3_ABI_COMPATIBLE  # TODO: deprecated
     CXXFLAGS += -DOPENVDB_ABI_VERSION_NUMBER=$(abi)
-    HCUSTOM_EXTRA_CFLAGS += -DOPENVDB_3_ABI_COMPATIBLE  # TODO: deprecated
     HCUSTOM_EXTRA_CFLAGS += -DOPENVDB_ABI_VERSION_NUMBER=$(abi)
 endif
 ifdef MBSD
