@@ -7,6 +7,11 @@
 <B>Version 7.1.0</B> - <I>In Development</I>
 
 @par
+<BLOCKQUOTE>
+As of this release, support for grid ABI=4 has been removed.
+</BLOCKQUOTE>
+
+@par
 Improvements:
 - Added GroupWriteHandle::setUnsafe() for faster performance when the group
   array is known to be in-core and non-uniform.
@@ -145,6 +150,8 @@ Build:
   of OpenEXR/IlmBase on Windows.
 - Improved the behaviour of boost implicit linking with the
   Boost::disable_autolinking target.
+- Removed the @c OPENVDB_2_ABI_COMPATIBLE and @c OPENVDB_3_ABI_COMPATIBLE
+  macros.
 
 
 @htmlonly <a name="v7_0_0_changes"></a>@endhtmlonly
